--- a/src/index.css
+++ b/src/index.css
@@ -37,14 +37,15 @@ body{
   height: 100vh;
   overflow: hidden;
   padding: 120px 15px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 50px;
 }
 
 @media (min-width: 600px){
   #root{
-    display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-items: center;
     padding: 0;
   }
 }
