--- a/src/App.module.css
+++ b/src/App.module.css
@@ -28,7 +28,7 @@
 }
 
 .divider{
-  background: url("../public/images/pattern-divider-mobile.svg") center no-repeat;
+  background: url("/images/pattern-divider-mobile.svg") center no-repeat;
   height: 30px;
   display: flex;
   justify-content: center;
@@ -71,6 +71,6 @@
   }
 
   .divider{
-    background: url("../public/images/pattern-divider-desktop.svg") center no-repeat;
+    background: url("/images/pattern-divider-desktop.svg") center no-repeat;
   }
 }
